tests/en/errors/empty_func.salam
// EXPECT: E061
func noop():
end
func main: println ("x") end
